syntax="proto3";

option go_package = "stocks/pkg/api/abstract;abstract";

message GeneralResponse {
    bool success = 1;
    string message = 2;
}
